--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,14 @@
   "author": "s3rious a.k.a Leonid Semenov <canismajor@kaschenka.ru>",
   "license": "MIT",
   "dependencies": {
+    "@types/koa": "^2.0.49",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-router": "^7.0.42",
     "@types/redis": "^2.8.13",
     "@types/sharp": "^0.22.2",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
     "redis": "^2.8.0",
     "sharp": "^0.22.1",
     "telegraf": "^3.30.1"
