--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -12,7 +12,8 @@
         "TG_BOT_TOKEN": "<YOUR_TOKEN>",
         "TG_CHAT_NAME": "<YOUR_CHAT_NAME_WITHOUT_@>",
         "MEDIA_BASE_URL": "<YOUR_ABSOLUTE_LINK_TO_MEDIA>",
-        "ENVIRONMENT": "production"
+        "ENVIRONMENT": "production",
+        "PORT": 1337
       },
       "volumes": [
         "./media:/media"
