--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,13 @@
     "@types/koa-router": "^7.0.42",
     "@types/redis": "^2.8.13",
     "@types/sharp": "^0.22.2",
+    "@types/socket.io": "^2.1.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "redis": "^2.8.0",
     "sharp": "^0.22.1",
+    "socket.io": "^2.2.0",
     "telegraf": "^3.30.1"
   },
   "devDependencies": {
