--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
     "@types/koa": "^2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.0.42",
+    "@types/koa2-cors": "^2.0.1",
     "@types/redis": "^2.8.13",
     "@types/sharp": "^0.22.2",
     "@types/socket.io": "^2.1.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "redis": "^2.8.0",
     "sharp": "^0.22.1",
     "socket.io": "^2.2.0",
